# Automated-Bare-Metal-Provisioning-and-Repository-Manager

./: .ansible-lint  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ansible/: inventory.ini  site.yml
ansible/group_vars/: all.yml
ansible/roles/baseline/handlers/: main.yml
ansible/roles/baseline/tasks/: main.yml
ansible/roles/baseline/templates/: sysctl.conf.j2
ansible/roles/repo_client/tasks/: main.yml
ansible/roles/repo_client/templates/: custom_repo.repo.j2
ansible/roles/security/handlers/: main.yml
ansible/roles/security/tasks/: main.yml
scripts/: Dockerfile.builder  post_failure_comment.py  run_ci.sh  setup_gpg.sh
src/repo_manager/: __init__.py  api.py  builder.py  cli.py  publisher.py  signer.py
src/repo_manager/templates/: index.html
src/tests/: __init__.py  test_api.py  test_builder.py  test_publisher.py  test_signer.py
