[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-manager"
version = "1.0.0"
description = "Automated RPM compilation, GPG signing, YUM repository publisher and provisioning baseline manager."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "jinja2>=3.1.2",
    "click>=8.1.3",
    "python-multipart>=0.0.6"
]

[project.scripts]
rpm-manager = "repo_manager.cli:main"
